# django-kafka-listener-adapter

./: README.md  setup.cfg  setup.py
kafka_adapter/: adapter.py  apps.py  handler.py  singleton.py  utils.py
