[metadata]
name = django-kafka-listener-adapter
version = 0.1
description = A Django app to listen kafka topics.
long_description = file: README.rst
author = Vladimir Mikryukov
author_email = motobiker2008@gmail.com
license = Apache v.2
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
install_requires =
    kafka-python==2.0.2
